[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rlox"
path = "src/lib.rs"

[[bin]]
name = "rlox"
path = "src/main.rs"

[[bin]]
name = "generate_ast"
path = "src/generate_ast.rs"

[dependencies]
